# fmp-storage

./: .env.example  .gitignore  README.md  app.py  cli.py  logging.ini  pyproject.toml
assets/: forex_pairs.txt  logging.ini
core/: __init__.py  config.py  consts.py  errors.py  models.py
core/components/: client.py  crawler.py  errors.py  scrapper.py  utils.py
core/components/economic_events/: client.py  crawler.py  errors.py  models.py  scrapper.py
core/components/forex_data/: client.py  crawler.py  models.py  scrapper.py
core/forex/: client.py
core/forex/economic_events/: client.py  crawler.py  models.py  scrapper.py
core/forex/stock_data/: client.py  models.py
core/repository/: errors.py  models.py  mongo.py
core/scrapper/: base.py  engine.py  utils.py
tools/: Dockerfile  docker-compose.yml
